fix: increased sizing and spacing between each question

--- a/src/index.css
+++ b/src/index.css
@@ -81,14 +81,14 @@ main {
 .question {
   color: var(--color-primary);
   font-family: Karla, sans-serif;
-  font-size: 1rem;
+  font-size: 1.5rem;
   margin-top: 14px;
 }
 
 .options-container {
   display: flex;
   gap: 13px;
-  margin: 11px 0 14px;
+  margin: 11px 0 25px;
 }
 
 .option input[type="radio"] {
@@ -100,7 +100,7 @@ main {
   border: 0.8px solid var(--btn-primary);
   border-radius: 9px;
   padding: 4px 16px;
-  font-size: 0.64rem;
+  font-size: 1.14rem;
   font-weight: 500;
   cursor: pointer;
   transition:
